<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/addTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            android:text="@string/additem"
            android:textColor="#000000"
            android:textSize="23sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/itemNameTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/itemName"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="#80000000" />

        <TextView
            android:id="@+id/categoryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            android:importantForAutofill="no"
            android:text="@string/category"
            android:textSize="17sp" />

        <Spinner
            android:id="@+id/categorySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/amountTextField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/amount"
                android:digits="0123456789."
                android:importantForAutofill="no"
                android:inputType="phone" />

            <EditText
                android:id="@+id/priceTextField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/price"
                android:digits="0123456789."
                android:importantForAutofill="no"
                android:inputType="phone" />
        </LinearLayout>

        <EditText
            android:id="@+id/addressTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/address"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/phoneTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/phoneNumber"
            android:importantForAutofill="no"
            android:digits="0123456789*#+"
            android:inputType="phone" />

        <EditText
            android:id="@+id/descriptionTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/description"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/photoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:text="@string/photo"
            android:textSize="17sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/imageUploadButton"
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:layout_marginStart="21dp"
                android:layout_marginTop="9dp"

                android:background="@drawable/camera" />

            <ImageView
                android:id="@+id/attachImageView"
                android:layout_width="90dp"
                android:layout_height="85dp"
                android:layout_marginStart="12dp"
                android:scaleType="centerCrop"
                app:srcCompat="@android:color/darker_gray" />
        </FrameLayout>

        <Button
            android:id="@+id/uploadButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="#FF0000"
            android:text="@string/upload"
            android:textColor="#FFFFFF" />
    </LinearLayout>




</FrameLayout>