<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".David.activity.ItemDetailActivity">

    <TextView
        android:id="@+id/itemDetailTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:textSize="25dp"
        android:layout_marginStart="10dp"
        android:textColor="#000000"
        android:text="TextView" />

    <ImageView
        android:id="@+id/itemDetailImage"
        android:layout_width="match_parent"
        android:layout_height="190sp"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:scaleType="centerCrop"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/itemDetailPrice"
            android:layout_width="81dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/dollar"
            android:drawableTint="#FF0000"
            android:text="TextView"
            android:textColor="#FF0000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/itemDetailAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="TextView"
            android:paddingEnd="10dp"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>


    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="21sp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/itemDetailDescription"
        android:layout_width="match_parent"
        android:layout_marginStart="10dp"

        android:textColor="#000000"
        android:textSize="18sp"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">


        <TextView
            android:id="@+id/address2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:textSize="21sp"
            android:text="@string/address2" />

        <Button
            android:id="@+id/itemDetailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@null"
            android:gravity="start"
            android:text="TextView"
            android:textAllCaps="false"
            android:textColor="#4CAF50"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"

        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/tel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:textSize="21sp"
            android:text="@string/phone" />

        <Button
            android:id="@+id/itemDetailPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="start"
            android:textColor="#4CAF50"
            android:layout_marginStart="5dp"
            android:textSize="18sp"
            android:text="TextView" />
    </LinearLayout>


</LinearLayout>